--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="SecureGuard - Συστήματα Ασφαλείας & Πυρασφάλειας">
   <meta property="og:description" content="Ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις. Συστήματα συναγερμού, κάμερες, πυρανίχνευση.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://ppolydoras.github.io/alarms-site/">
+  <meta property="og:url" content="https://alarm-systems.gr/">
   <meta property="og:locale" content="el_GR">
   
   <!-- Twitter -->
@@ -19,7 +19,7 @@
   <meta name="twitter:description" content="Ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις.">
   
   <!-- Canonical -->
-  <link rel="canonical" href="https://ppolydoras.github.io/alarms-site/">
+  <link rel="canonical" href="https://alarm-systems.gr/">
   
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
