--- a/products.html
+++ b/products.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Προϊόντα Ασφαλείας | SecureGuard">
   <meta property="og:description" content="Συστήματα συναγερμού, κάμερες ασφαλείας, περιμετρική προστασία και έξυπνος έλεγχος για σπίτι και επιχείρηση.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://ppolydoras.github.io/alarms-site/products.html">
+  <meta property="og:url" content="https://alarm-systems.gr/products.html">
   <meta property="og:locale" content="el_GR">
   
   <!-- Twitter -->
@@ -19,7 +19,7 @@
   <meta name="twitter:description" content="Συστήματα συναγερμού, κάμερες ασφαλείας, περιμετρική προστασία.">
   
   <!-- Canonical -->
-  <link rel="canonical" href="https://ppolydoras.github.io/alarms-site/products.html">
+  <link rel="canonical" href="https://alarm-systems.gr/products.html">
   
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
