Update contact information
- Phone: +30 698 080 8226
- Address: Κορυτσάς 48, Αιγάλεω, 12243
- ΓΕΜΗ: 182078203000
- Updated emails to @alarm-systems.gr

--- a/accessibility.html
+++ b/accessibility.html
@@ -158,11 +158,11 @@
                   <h3 class="h6 mb-3">Στοιχεία Επικοινωνίας για θέματα Προσβασιμότητας</h3>
                   <p class="mb-1">
                     <strong>Email:</strong> 
-                    <a href="mailto:accessibility@secureguard.example.gr">accessibility@secureguard.example.gr</a>
+                    <a href="mailto:accessibility@alarm-systems.gr">accessibility@alarm-systems.gr</a>
                   </p>
                   <p class="mb-1">
                     <strong>Τηλέφωνο:</strong> 
-                    <a href="tel:+302101234567">210 123 4567</a>
+                    <a href="tel:+306980808226">698 080 8226</a>
                   </p>
                   <p class="mb-0 text-muted small">Προσπαθούμε να απαντάμε σε αναφορές προσβασιμότητας εντός 5 εργάσιμων ημερών.</p>
                 </div>
@@ -229,10 +229,11 @@
         <div class="col-lg-4">
           <h2>Επικοινωνία</h2>
           <address>
-            <p>Οδός Ασφαλείας 123<br>Αθήνα, 10000</p>
+            <p>Κορυτσάς 48<br>Αιγάλεω, 12243</p>
+            <p class="small">Αρ. ΓΕΜΗ: 182078203000</p>
             <p>
-              <a href="tel:+302101234567">210 123 4567</a><br>
-              <a href="mailto:info@secureguard.example.gr">info@secureguard.example.gr</a>
+              <a href="tel:+306980808226">698 080 8226</a><br>
+              <a href="mailto:info@alarm-systems.gr">info@alarm-systems.gr</a>
             </p>
           </address>
         </div>
