--- a/contact.html
+++ b/contact.html
@@ -102,8 +102,9 @@
               <div>
                 <h3 class="h6 mb-1">Διεύθυνση</h3>
                 <address class="mb-0 text-muted">
-                  Οδός Ασφαλείας 123<br>
-                  Αθήνα, 10000<br>
+                  Κορυτσάς 48<br>
+                  Αιγάλεω / Δυτικού Τομέα Αθηνών<br>
+                  Αιγάλεω, 12243<br>
                   Ελλάδα
                 </address>
               </div>
@@ -118,7 +119,7 @@
               <div>
                 <h3 class="h6 mb-1">Τηλέφωνο</h3>
                 <p class="mb-0">
-                  <a href="tel:+302101234567" class="text-muted">210 123 4567</a>
+                  <a href="tel:+306980808226" class="text-muted">698 080 8226</a>
                 </p>
               </div>
             </div>
@@ -132,7 +133,7 @@
               <div>
                 <h3 class="h6 mb-1">Email</h3>
                 <p class="mb-0">
-                  <a href="mailto:info@secureguard.example.gr" class="text-muted">info@secureguard.example.gr</a>
+                  <a href="mailto:info@alarm-systems.gr" class="text-muted">info@alarm-systems.gr</a>
                 </p>
               </div>
             </div>
@@ -231,7 +232,7 @@
                       name="phone" 
                       autocomplete="tel"
                       aria-describedby="phone-hint"
-                      placeholder="π.χ. 210 123 4567"
+                      placeholder="π.χ. 698 080 8226"
                     >
                     <div id="phone-hint" class="form-text">Για να σας καλέσουμε αν προτιμάτε τηλεφωνική επικοινωνία.</div>
                   </div>
@@ -373,10 +374,12 @@
         <div class="col-lg-4">
           <h2>Επικοινωνία</h2>
           <address>
-            <p>Οδός Ασφαλείας 123<br>Αθήνα, 10000</p>
+            <p>Κορυτσάς 48<br>
+                  Αιγάλεω / Δυτικού Τομέα Αθηνών<br>Αιγάλεω, 12243</p>
+            <p class="small">Αρ. ΓΕΜΗ: 182078203000</p>
             <p>
-              <a href="tel:+302101234567">210 123 4567</a><br>
-              <a href="mailto:info@secureguard.example.gr">info@secureguard.example.gr</a>
+              <a href="tel:+306980808226">698 080 8226</a><br>
+              <a href="mailto:info@alarm-systems.gr">info@alarm-systems.gr</a>
             </p>
           </address>
         </div>
