--- a/privacy.html
+++ b/privacy.html
@@ -159,7 +159,7 @@
                 <li><strong>Φορητότητα:</strong> Να λάβετε τα δεδομένα σας σε κοινό μορφότυπο</li>
                 <li><strong>Εναντίωση:</strong> Να εναντιωθείτε στην επεξεργασία των δεδομένων σας</li>
               </ul>
-              <p>Για να ασκήσετε οποιοδήποτε από αυτά τα δικαιώματα, επικοινωνήστε μαζί μας στο <a href="mailto:privacy@secureguard.example.gr">privacy@secureguard.example.gr</a>.</p>
+              <p>Για να ασκήσετε οποιοδήποτε από αυτά τα δικαιώματα, επικοινωνήστε μαζί μας στο <a href="mailto:privacy@alarm-systems.gr">privacy@alarm-systems.gr</a>.</p>
             </article>
 
             <!-- Security -->
@@ -197,9 +197,9 @@
               <p>Για ερωτήσεις σχετικά με αυτή την πολιτική απορρήτου ή τον τρόπο που χειριζόμαστε τα δεδομένα σας, επικοινωνήστε μαζί μας:</p>
               <div class="card bg-light border-0">
                 <div class="card-body">
-                  <p class="mb-1"><strong>Email:</strong> <a href="mailto:privacy@secureguard.example.gr">privacy@secureguard.example.gr</a></p>
-                  <p class="mb-1"><strong>Τηλέφωνο:</strong> <a href="tel:+302101234567">210 123 4567</a></p>
-                  <p class="mb-0"><strong>Διεύθυνση:</strong> Οδός Ασφαλείας 123, Αθήνα, 10000</p>
+                  <p class="mb-1"><strong>Email:</strong> <a href="mailto:privacy@alarm-systems.gr">privacy@alarm-systems.gr</a></p>
+                  <p class="mb-1"><strong>Τηλέφωνο:</strong> <a href="tel:+306980808226">698 080 8226</a></p>
+                  <p class="mb-0"><strong>Διεύθυνση:</strong> Κορυτσάς 48, Αιγάλεω, 12243</p>
                 </div>
               </div>
             </article>
@@ -242,10 +242,11 @@
         <div class="col-lg-4">
           <h2>Επικοινωνία</h2>
           <address>
-            <p>Οδός Ασφαλείας 123<br>Αθήνα, 10000</p>
+            <p>Κορυτσάς 48<br>Αιγάλεω, 12243</p>
+            <p class="small">Αρ. ΓΕΜΗ: 182078203000</p>
             <p>
-              <a href="tel:+302101234567">210 123 4567</a><br>
-              <a href="mailto:info@secureguard.example.gr">info@secureguard.example.gr</a>
+              <a href="tel:+306980808226">698 080 8226</a><br>
+              <a href="mailto:info@alarm-systems.gr">info@alarm-systems.gr</a>
             </p>
           </address>
         </div>
