--- a/products.html
+++ b/products.html
@@ -215,10 +215,11 @@
         <div class="col-lg-4">
           <h2>Επικοινωνία</h2>
           <address>
-            <p>Οδός Ασφαλείας 123<br>Αθήνα, 10000</p>
+            <p>Κορυτσάς 48<br>Αιγάλεω, 12243</p>
+            <p class="small">Αρ. ΓΕΜΗ: 182078203000</p>
             <p>
-              <a href="tel:+302101234567">210 123 4567</a><br>
-              <a href="mailto:info@secureguard.example.gr">info@secureguard.example.gr</a>
+              <a href="tel:+306980808226">698 080 8226</a><br>
+              <a href="mailto:info@alarm-systems.gr">info@alarm-systems.gr</a>
             </p>
           </address>
         </div>
