Update company narrative and dates
- Copyright: © 2025-2026
- Company founded: 2025
- Team experience: 10+ years individual experience
- Updated about page: new company with experienced founders
- Emphasize energy, flexibility, and modern approach
- All policy/statement dates updated to January 2026

--- a/404.html
+++ b/404.html
@@ -98,7 +98,7 @@
       <div class="row g-4">
         <div class="col-lg-4">
           <h2>SecureGuard</h2>
-          <p>Παρέχουμε ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις από το 2010. Η ασφάλειά σας είναι η προτεραιότητά μας.</p>
+          <p>Παρέχουμε ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις από το 2025. Η ασφάλειά σας είναι η προτεραιότητά μας.</p>
         </div>
         <div class="col-lg-4">
           <h2>Επικοινωνία</h2>
@@ -124,7 +124,7 @@
       <div class="footer-bottom">
         <div class="row align-items-center">
           <div class="col-md-6">
-            <p>&copy; 2024 SecureGuard. Με επιφύλαξη παντός δικαιώματος.</p>
+            <p>© 2025-2026 SecureGuard. Με επιφύλαξη παντός δικαιώματος.</p>
           </div>
           <div class="col-md-6 text-md-end">
             <p>Σχεδιασμένο με γνώμονα την προσβασιμότητα</p>
