--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Σχετικά με Εμάς - Η Εταιρεία | SecureGuard</title>
-  <meta name="description" content="Γνωρίστε την SecureGuard. Από το 2010 προσφέρουμε αξιόπιστες λύσεις ασφαλείας με γνώμονα την ποιότητα, την αξιοπιστία και την εξυπηρέτηση.">
+  <meta name="description" content="Γνωρίστε την SecureGuard. Από το 2025 προσφέρουμε αξιόπιστες λύσεις ασφαλείας με γνώμονα την ποιότητα, την αξιοπιστία και την εξυπηρέτηση.">
   
   <!-- Open Graph -->
   <meta property="og:title" content="Σχετικά με Εμάς | SecureGuard">
@@ -89,22 +89,22 @@
         <div class="row align-items-center">
           <div class="col-lg-7">
             <h2 id="story-heading" class="section-title">Η Ιστορία μας</h2>
-            <p class="lead">Από το 2010 δίπλα σας για την ασφάλεια που αξίζετε.</p>
-            <p>Η SecureGuard ξεκίνησε με ένα απλό όραμα: να κάνει την επαγγελματική ασφάλεια προσιτή σε κάθε σπίτι και επιχείρηση. Με έδρα την Αθήνα, ξεκινήσαμε ως μια μικρή ομάδα τεχνικών με πάθος για την τεχνολογία και τη σωστή εξυπηρέτηση.</p>
-            <p>Σήμερα, μετά από περισσότερα από δέκα χρόνια εμπειρίας, έχουμε εξυπηρετήσει εκατοντάδες πελάτες σε ολόκληρη την Αττική. Από μονοκατοικίες μέχρι επαγγελματικούς χώρους, από απλά συστήματα συναγερμού μέχρι ολοκληρωμένες λύσεις ασφαλείας και πυρασφάλειας.</p>
-            <p>Η επιτυχία μας βασίζεται στη σχέση εμπιστοσύνης που χτίζουμε με τους πελάτες μας. Δεν πουλάμε απλώς εξοπλισμό - προσφέρουμε λύσεις που ανταποκρίνονται στις πραγματικές ανάγκες και υποστηρίζουμε τους πελάτες μας μακροπρόθεσμα.</p>
+            <p class="lead">Νέα εταιρεία, δοκιμασμένη εμπειρία.</p>
+            <p>Η SecureGuard ιδρύθηκε το 2025 με ένα ξεκάθαρο όραμα: να προσφέρει επαγγελματικές λύσεις ασφαλείας με την ποιότητα που αξίζει κάθε σπίτι και επιχείρηση. Αν και νέα εταιρεία, τα μέλη της ομάδας μας φέρνουν <strong>πάνω από 10 χρόνια προσωπικής εμπειρίας</strong> στον κλάδο.</p>
+            <p>Η ομάδα μας αποτελείται από καταρτισμένους επαγγελματίες που έχουν εργαστεί σε μεγάλα έργα, έχουν αντιμετωπίσει κάθε είδους πρόκληση και γνωρίζουν την αγορά από μέσα. Συνδυάζουμε αυτή τη βαθιά τεχνογνωσία με τη φρέσκια ενέργεια και την ευελιξία ενός νέου εγχειρήματος.</p>
+            <p>Πιστεύουμε ότι η εμπειρία δεν σημαίνει στασιμότητα. Είμαστε ενεργοί, παρακολουθούμε στενά τις εξελίξεις της τεχνολογίας και προσαρμοζόμαστε γρήγορα στις σύγχρονες ανάγκες. Η επιτυχία μας χτίζεται στη σχέση εμπιστοσύνης με τους πελάτες μας - δεν πουλάμε απλώς εξοπλισμό, προσφέρουμε λύσεις.</p>
           </div>
           <div class="col-lg-5 mt-4 mt-lg-0">
             <div class="card bg-light border-0">
               <div class="card-body p-4 text-center">
                 <div class="row g-4">
                   <div class="col-6">
-                    <div class="display-4 fw-bold text-primary-custom">14+</div>
-                    <p class="text-muted mb-0">Χρόνια εμπειρίας</p>
+                    <div class="display-4 fw-bold text-primary-custom">10+</div>
+                    <p class="text-muted mb-0">Χρόνια εμπειρίας ομάδας</p>
                   </div>
                   <div class="col-6">
-                    <div class="display-4 fw-bold text-primary-custom">500+</div>
-                    <p class="text-muted mb-0">Εγκαταστάσεις</p>
+                    <div class="display-4 fw-bold text-primary-custom">100+</div>
+                    <p class="text-muted mb-0">Έργα στο ενεργητικό μας</p>
                   </div>
                   <div class="col-6">
                     <div class="display-4 fw-bold text-primary-custom">98%</div>
@@ -230,7 +230,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 mb-4 mb-lg-0">
             <h2 id="certs-heading" class="section-title">Εμπειρία & Τεχνογνωσία</h2>
-            <p>Η ομάδα μας αποτελείται από έμπειρους τεχνικούς με εξειδικευμένη κατάρτιση στην εγκατάσταση και συντήρηση συστημάτων ασφαλείας και πυρασφάλειας.</p>
+            <p>Τα μέλη της ομάδας μας διαθέτουν πάνω από μια δεκαετία εμπειρίας στον κλάδο της ασφάλειας. Έχουμε εργαστεί σε ποικίλα έργα - από οικιακές εγκαταστάσεις μέχρι σύνθετα εμπορικά συστήματα - και φέρνουμε αυτή την τεχνογνωσία σε κάθε νέο πελάτη.</p>
             <ul class="category-list">
               <li>Εξειδίκευση σε συστήματα κορυφαίων κατασκευαστών</li>
               <li>Συνεχής εκπαίδευση σε νέες τεχνολογίες</li>
@@ -274,7 +274,7 @@
       <div class="row g-4">
         <div class="col-lg-4">
           <h2>SecureGuard</h2>
-          <p>Παρέχουμε ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις από το 2010. Η ασφάλειά σας είναι η προτεραιότητά μας.</p>
+          <p>Παρέχουμε ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις από το 2025. Η ασφάλειά σας είναι η προτεραιότητά μας.</p>
         </div>
         <div class="col-lg-4">
           <h2>Επικοινωνία</h2>
@@ -300,7 +300,7 @@
       <div class="footer-bottom">
         <div class="row align-items-center">
           <div class="col-md-6">
-            <p>&copy; 2024 SecureGuard. Με επιφύλαξη παντός δικαιώματος.</p>
+            <p>© 2025-2026 SecureGuard. Με επιφύλαξη παντός δικαιώματος.</p>
           </div>
           <div class="col-md-6 text-md-end">
             <p>Σχεδιασμένο με γνώμονα την προσβασιμότητα</p>
