--- a/accessibility.html
+++ b/accessibility.html
@@ -194,7 +194,7 @@
             <!-- Last Updated -->
             <article>
               <h2 class="section-title">Ενημέρωση Δήλωσης</h2>
-              <p>Αυτή η δήλωση προσβασιμότητας ενημερώθηκε τελευταία φορά στις <strong>Ιανουάριος 2024</strong>.</p>
+              <p>Αυτή η δήλωση προσβασιμότητας ενημερώθηκε τελευταία φορά στις <strong>Ιανουάριος 2026</strong>.</p>
               <p>Επανεξετάζουμε τακτικά τον ιστότοπο και αυτή τη δήλωση για να διασφαλίσουμε τη συνεχή συμμόρφωση με τα πρότυπα προσβασιμότητας.</p>
             </article>
           </div>
@@ -224,7 +224,7 @@
       <div class="row g-4">
         <div class="col-lg-4">
           <h2>SecureGuard</h2>
-          <p>Παρέχουμε ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις από το 2010. Η ασφάλειά σας είναι η προτεραιότητά μας.</p>
+          <p>Παρέχουμε ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις από το 2025. Η ασφάλειά σας είναι η προτεραιότητά μας.</p>
         </div>
         <div class="col-lg-4">
           <h2>Επικοινωνία</h2>
@@ -250,7 +250,7 @@
       <div class="footer-bottom">
         <div class="row align-items-center">
           <div class="col-md-6">
-            <p>&copy; 2024 SecureGuard. Με επιφύλαξη παντός δικαιώματος.</p>
+            <p>© 2025-2026 SecureGuard. Με επιφύλαξη παντός δικαιώματος.</p>
           </div>
           <div class="col-md-6 text-md-end">
             <p>Σχεδιασμένο με γνώμονα την προσβασιμότητα</p>
