--- a/privacy.html
+++ b/privacy.html
@@ -92,7 +92,7 @@
             <article class="mb-5">
               <h2 class="section-title">Εισαγωγή</h2>
               <p>Η SecureGuard σέβεται το απόρρητό σας και δεσμεύεται να προστατεύει τα προσωπικά σας δεδομένα. Αυτή η πολιτική απορρήτου εξηγεί πώς συλλέγουμε, χρησιμοποιούμε και προστατεύουμε τις πληροφορίες που μας παρέχετε μέσω του ιστοτόπου μας.</p>
-              <p class="text-muted"><em>Τελευταία ενημέρωση: Ιανουάριος 2024</em></p>
+              <p class="text-muted"><em>Τελευταία ενημέρωση: Ιανουάριος 2026</em></p>
             </article>
 
             <!-- Data Collection -->
@@ -237,7 +237,7 @@
       <div class="row g-4">
         <div class="col-lg-4">
           <h2>SecureGuard</h2>
-          <p>Παρέχουμε ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις από το 2010. Η ασφάλειά σας είναι η προτεραιότητά μας.</p>
+          <p>Παρέχουμε ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις από το 2025. Η ασφάλειά σας είναι η προτεραιότητά μας.</p>
         </div>
         <div class="col-lg-4">
           <h2>Επικοινωνία</h2>
@@ -263,7 +263,7 @@
       <div class="footer-bottom">
         <div class="row align-items-center">
           <div class="col-md-6">
-            <p>&copy; 2024 SecureGuard. Με επιφύλαξη παντός δικαιώματος.</p>
+            <p>© 2025-2026 SecureGuard. Με επιφύλαξη παντός δικαιώματος.</p>
           </div>
           <div class="col-md-6 text-md-end">
             <p>Σχεδιασμένο με γνώμονα την προσβασιμότητα</p>
