--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>404 - Η σελίδα δεν βρέθηκε | SecureGuard</title>
-  <meta name="description" content="Η σελίδα που ζητήσατε δεν βρέθηκε. Επιστρέψτε στην αρχική σελίδα της SecureGuard.">
+  <title>404 - Η σελίδα δεν βρέθηκε | SafeGuard</title>
+  <meta name="description" content="Η σελίδα που ζητήσατε δεν βρέθηκε. Επιστρέψτε στην αρχική σελίδα της SafeGuard.">
   <meta name="robots" content="noindex, follow">
   
   <!-- Bootstrap 5 CSS -->
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" aria-label="Κύρια πλοήγηση">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="assets/logo.svg" alt="SecureGuard - Επιστροφή στην αρχική" width="200" height="50">
+          <img src="assets/logo.svg" alt="SafeGuard - Επιστροφή στην αρχική" width="200" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Εναλλαγή πλοήγησης">
           <span class="navbar-toggler-icon"></span>
@@ -97,7 +97,7 @@
     <div class="container">
       <div class="row g-4">
         <div class="col-lg-4">
-          <h2>SecureGuard</h2>
+          <h2>SafeGuard</h2>
           <p>Παρέχουμε ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις από το 2025. Η ασφάλειά σας είναι η προτεραιότητά μας.</p>
         </div>
         <div class="col-lg-4">
@@ -124,7 +124,7 @@
       <div class="footer-bottom">
         <div class="row align-items-center">
           <div class="col-md-6">
-            <p>© 2025-2026 SecureGuard. Με επιφύλαξη παντός δικαιώματος.</p>
+            <p>© 2025-2026 ΚΑΤΣΙΓΙΑΝΝΗΣ ΓΕΩΡΓΙΟΣ ΚΑΙ ΣΙΑ Ο.Ε. (SafeGuard). Με επιφύλαξη παντός δικαιώματος.</p>
           </div>
           <div class="col-md-6 text-md-end">
             <p>Σχεδιασμένο με γνώμονα την προσβασιμότητα</p>
