--- a/about.html
+++ b/about.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Σχετικά με Εμάς - Η Εταιρεία | SecureGuard</title>
-  <meta name="description" content="Γνωρίστε την SecureGuard. Από το 2025 προσφέρουμε αξιόπιστες λύσεις ασφαλείας με γνώμονα την ποιότητα, την αξιοπιστία και την εξυπηρέτηση.">
+  <title>Σχετικά με Εμάς - Η Εταιρεία | SafeGuard</title>
+  <meta name="description" content="Γνωρίστε την SafeGuard. Από το 2025 προσφέρουμε αξιόπιστες λύσεις ασφαλείας με γνώμονα την ποιότητα, την αξιοπιστία και την εξυπηρέτηση.">
   
   <!-- Open Graph -->
-  <meta property="og:title" content="Σχετικά με Εμάς | SecureGuard">
-  <meta property="og:description" content="Η ιστορία, οι αξίες και η εμπειρία της SecureGuard στον τομέα της ασφάλειας.">
+  <meta property="og:title" content="Σχετικά με Εμάς | SafeGuard">
+  <meta property="og:description" content="Η ιστορία, οι αξίες και η εμπειρία της SafeGuard στον τομέα της ασφάλειας.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://alarm-systems.gr/about.html">
   <meta property="og:locale" content="el_GR">
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Σχετικά με Εμάς | SecureGuard">
-  <meta name="twitter:description" content="Η ιστορία και οι αξίες της SecureGuard.">
+  <meta name="twitter:title" content="Σχετικά με Εμάς | SafeGuard">
+  <meta name="twitter:description" content="Η ιστορία και οι αξίες της SafeGuard.">
   
   <!-- Canonical -->
   <link rel="canonical" href="https://alarm-systems.gr/about.html">
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" aria-label="Κύρια πλοήγηση">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="assets/logo.svg" alt="SecureGuard - Επιστροφή στην αρχική" width="200" height="50">
+          <img src="assets/logo.svg" alt="SafeGuard - Επιστροφή στην αρχική" width="200" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Εναλλαγή πλοήγησης">
           <span class="navbar-toggler-icon"></span>
@@ -79,7 +79,7 @@
           </ol>
         </nav>
         <h1>Σχετικά με Εμάς</h1>
-        <p class="lead">Η ιστορία και οι αξίες της SecureGuard</p>
+        <p class="lead">Η ιστορία και οι αξίες της SafeGuard</p>
       </div>
     </section>
 
@@ -90,7 +90,7 @@
           <div class="col-lg-7">
             <h2 id="story-heading" class="section-title">Η Ιστορία μας</h2>
             <p class="lead">Νέα εταιρεία, δοκιμασμένη εμπειρία.</p>
-            <p>Η SecureGuard ιδρύθηκε το 2025 με ένα ξεκάθαρο όραμα: να προσφέρει επαγγελματικές λύσεις ασφαλείας με την ποιότητα που αξίζει κάθε σπίτι και επιχείρηση. Αν και νέα εταιρεία, τα μέλη της ομάδας μας φέρνουν <strong>πάνω από 10 χρόνια προσωπικής εμπειρίας</strong> στον κλάδο.</p>
+            <p>Η SafeGuard ιδρύθηκε το 2025 με ένα ξεκάθαρο όραμα: να προσφέρει επαγγελματικές λύσεις ασφαλείας με την ποιότητα που αξίζει κάθε σπίτι και επιχείρηση. Αν και νέα εταιρεία, τα μέλη της ομάδας μας φέρνουν <strong>πάνω από 10 χρόνια προσωπικής εμπειρίας</strong> στον κλάδο.</p>
             <p>Η ομάδα μας αποτελείται από καταρτισμένους επαγγελματίες που έχουν εργαστεί σε μεγάλα έργα, έχουν αντιμετωπίσει κάθε είδους πρόκληση και γνωρίζουν την αγορά από μέσα. Συνδυάζουμε αυτή τη βαθιά τεχνογνωσία με τη φρέσκια ενέργεια και την ευελιξία ενός νέου εγχειρήματος.</p>
             <p>Πιστεύουμε ότι η εμπειρία δεν σημαίνει στασιμότητα. Είμαστε ενεργοί, παρακολουθούμε στενά τις εξελίξεις της τεχνολογίας και προσαρμοζόμαστε γρήγορα στις σύγχρονες ανάγκες. Η επιτυχία μας χτίζεται στη σχέση εμπιστοσύνης με τους πελάτες μας - δεν πουλάμε απλώς εξοπλισμό, προσφέρουμε λύσεις.</p>
           </div>
@@ -273,7 +273,7 @@
     <div class="container">
       <div class="row g-4">
         <div class="col-lg-4">
-          <h2>SecureGuard</h2>
+          <h2>SafeGuard</h2>
           <p>Παρέχουμε ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις από το 2025. Η ασφάλειά σας είναι η προτεραιότητά μας.</p>
         </div>
         <div class="col-lg-4">
@@ -300,7 +300,7 @@
       <div class="footer-bottom">
         <div class="row align-items-center">
           <div class="col-md-6">
-            <p>© 2025-2026 SecureGuard. Με επιφύλαξη παντός δικαιώματος.</p>
+            <p>© 2025-2026 ΚΑΤΣΙΓΙΑΝΝΗΣ ΓΕΩΡΓΙΟΣ ΚΑΙ ΣΙΑ Ο.Ε. (SafeGuard). Με επιφύλαξη παντός δικαιώματος.</p>
           </div>
           <div class="col-md-6 text-md-end">
             <p>Σχεδιασμένο με γνώμονα την προσβασιμότητα</p>
