--- a/accessibility.html
+++ b/accessibility.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Δήλωση Προσβασιμότητας | SecureGuard</title>
-  <meta name="description" content="Δήλωση προσβασιμότητας της SecureGuard. Η δέσμευσή μας για ψηφιακή προσβασιμότητα και συμμόρφωση με το πρότυπο WCAG 2.2 AA.">
+  <title>Δήλωση Προσβασιμότητας | SafeGuard</title>
+  <meta name="description" content="Δήλωση προσβασιμότητας της SafeGuard. Η δέσμευσή μας για ψηφιακή προσβασιμότητα και συμμόρφωση με το πρότυπο WCAG 2.2 AA.">
   
   <!-- Open Graph -->
-  <meta property="og:title" content="Δήλωση Προσβασιμότητας | SecureGuard">
-  <meta property="og:description" content="Η δέσμευση της SecureGuard για ψηφιακή προσβασιμότητα.">
+  <meta property="og:title" content="Δήλωση Προσβασιμότητας | SafeGuard">
+  <meta property="og:description" content="Η δέσμευση της SafeGuard για ψηφιακή προσβασιμότητα.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://alarm-systems.gr/accessibility.html">
   <meta property="og:locale" content="el_GR">
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Δήλωση Προσβασιμότητας | SecureGuard">
-  <meta name="twitter:description" content="Η δέσμευση της SecureGuard για ψηφιακή προσβασιμότητα.">
+  <meta name="twitter:title" content="Δήλωση Προσβασιμότητας | SafeGuard">
+  <meta name="twitter:description" content="Η δέσμευση της SafeGuard για ψηφιακή προσβασιμότητα.">
   
   <!-- Canonical -->
   <link rel="canonical" href="https://alarm-systems.gr/accessibility.html">
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" aria-label="Κύρια πλοήγηση">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="assets/logo.svg" alt="SecureGuard - Επιστροφή στην αρχική" width="200" height="50">
+          <img src="assets/logo.svg" alt="SafeGuard - Επιστροφή στην αρχική" width="200" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Εναλλαγή πλοήγησης">
           <span class="navbar-toggler-icon"></span>
@@ -91,7 +91,7 @@
             <!-- Commitment -->
             <article class="mb-5">
               <h2 class="section-title">Η Δέσμευσή μας</h2>
-              <p>Η SecureGuard δεσμεύεται να διασφαλίζει την ψηφιακή προσβασιμότητα για άτομα με αναπηρίες. Εργαζόμαστε συνεχώς για τη βελτίωση της εμπειρίας χρήστη για όλους τους επισκέπτες του ιστοτόπου μας και εφαρμόζουμε τα σχετικά πρότυπα προσβασιμότητας.</p>
+              <p>Η SafeGuard δεσμεύεται να διασφαλίζει την ψηφιακή προσβασιμότητα για άτομα με αναπηρίες. Εργαζόμαστε συνεχώς για τη βελτίωση της εμπειρίας χρήστη για όλους τους επισκέπτες του ιστοτόπου μας και εφαρμόζουμε τα σχετικά πρότυπα προσβασιμότητας.</p>
               <p>Στόχος μας είναι η συμμόρφωση με το επίπεδο <strong>WCAG 2.2 AA</strong> (Web Content Accessibility Guidelines), ένα διεθνώς αναγνωρισμένο πρότυπο που καθορίζει πώς το διαδικτυακό περιεχόμενο μπορεί να γίνει πιο προσβάσιμο σε άτομα με αναπηρίες.</p>
             </article>
 
@@ -223,7 +223,7 @@
     <div class="container">
       <div class="row g-4">
         <div class="col-lg-4">
-          <h2>SecureGuard</h2>
+          <h2>SafeGuard</h2>
           <p>Παρέχουμε ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις από το 2025. Η ασφάλειά σας είναι η προτεραιότητά μας.</p>
         </div>
         <div class="col-lg-4">
@@ -250,7 +250,7 @@
       <div class="footer-bottom">
         <div class="row align-items-center">
           <div class="col-md-6">
-            <p>© 2025-2026 SecureGuard. Με επιφύλαξη παντός δικαιώματος.</p>
+            <p>© 2025-2026 ΚΑΤΣΙΓΙΑΝΝΗΣ ΓΕΩΡΓΙΟΣ ΚΑΙ ΣΙΑ Ο.Ε. (SafeGuard). Με επιφύλαξη παντός δικαιώματος.</p>
           </div>
           <div class="col-md-6 text-md-end">
             <p>Σχεδιασμένο με γνώμονα την προσβασιμότητα</p>
