--- a/firesafety.html
+++ b/firesafety.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Πυρασφάλεια - Πυρανίχνευση & Πυρόσβεση | SecureGuard</title>
-  <meta name="description" content="Συστήματα πυρανίχνευσης και πυρόσβεσης για επιχειρήσεις και κατοικίες. Μελέτη, εγκατάσταση και συντήρηση συστημάτων πυρασφάλειας από την SecureGuard.">
+  <title>Πυρασφάλεια - Πυρανίχνευση & Πυρόσβεση | SafeGuard</title>
+  <meta name="description" content="Συστήματα πυρανίχνευσης και πυρόσβεσης για επιχειρήσεις και κατοικίες. Μελέτη, εγκατάσταση και συντήρηση συστημάτων πυρασφάλειας από την SafeGuard.">
   
   <!-- Open Graph -->
-  <meta property="og:title" content="Πυρασφάλεια | SecureGuard">
+  <meta property="og:title" content="Πυρασφάλεια | SafeGuard">
   <meta property="og:description" content="Ολοκληρωμένες λύσεις πυρανίχνευσης και πυρόσβεσης για επιχειρήσεις και κατοικίες.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://alarm-systems.gr/firesafety.html">
@@ -15,7 +15,7 @@
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Πυρασφάλεια | SecureGuard">
+  <meta name="twitter:title" content="Πυρασφάλεια | SafeGuard">
   <meta name="twitter:description" content="Συστήματα πυρανίχνευσης και πυρόσβεσης.">
   
   <!-- Canonical -->
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" aria-label="Κύρια πλοήγηση">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="assets/logo.svg" alt="SecureGuard - Επιστροφή στην αρχική" width="200" height="50">
+          <img src="assets/logo.svg" alt="SafeGuard - Επιστροφή στην αρχική" width="200" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Εναλλαγή πλοήγησης">
           <span class="navbar-toggler-icon"></span>
@@ -247,7 +247,7 @@
     <div class="container">
       <div class="row g-4">
         <div class="col-lg-4">
-          <h2>SecureGuard</h2>
+          <h2>SafeGuard</h2>
           <p>Παρέχουμε ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις από το 2025. Η ασφάλειά σας είναι η προτεραιότητά μας.</p>
         </div>
         <div class="col-lg-4">
@@ -274,7 +274,7 @@
       <div class="footer-bottom">
         <div class="row align-items-center">
           <div class="col-md-6">
-            <p>© 2025-2026 SecureGuard. Με επιφύλαξη παντός δικαιώματος.</p>
+            <p>© 2025-2026 ΚΑΤΣΙΓΙΑΝΝΗΣ ΓΕΩΡΓΙΟΣ ΚΑΙ ΣΙΑ Ο.Ε. (SafeGuard). Με επιφύλαξη παντός δικαιώματος.</p>
           </div>
           <div class="col-md-6 text-md-end">
             <p>Σχεδιασμένο με γνώμονα την προσβασιμότητα</p>
