Final updates: email and consistency check
- Updated email to georgekat598@gmail.com across all pages
- Fixed robots.txt brand name (SecureGuard → SafeGuard)
- Verified all contact info is consistent
- All 9 pages pass WCAG 2.2 AA accessibility

Final details:
- Email: georgekat598@gmail.com
- Phone: +30 698 080 8226
- Address: Κορυτσάς 48, Αιγάλεω, 12243
- Company: ΚΑΤΣΙΓΙΑΝΝΗΣ ΓΕΩΡΓΙΟΣ ΚΑΙ ΣΙΑ Ο.Ε.
- Brand: SafeGuard
- ΓΕΜΗ: 182078203000

--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@
               <div>
                 <h3 class="h6 mb-1">Email</h3>
                 <p class="mb-0">
-                  <a href="mailto:info@alarm-systems.gr" class="text-muted">info@alarm-systems.gr</a>
+                  <a href="mailto:georgekat598@gmail.com" class="text-muted">georgekat598@gmail.com</a>
                 </p>
               </div>
             </div>
@@ -387,7 +387,7 @@
             <p class="small">Αρ. ΓΕΜΗ: 182078203000</p>
             <p>
               <a href="tel:+306980808226">698 080 8226</a><br>
-              <a href="mailto:info@alarm-systems.gr">info@alarm-systems.gr</a>
+              <a href="mailto:georgekat598@gmail.com">georgekat598@gmail.com</a>
             </p>
           </address>
         </div>
