--- a/privacy.html
+++ b/privacy.html
@@ -166,7 +166,7 @@
                 <li><strong>Φορητότητα:</strong> Να λάβετε τα δεδομένα σας σε κοινό μορφότυπο</li>
                 <li><strong>Εναντίωση:</strong> Να εναντιωθείτε στην επεξεργασία των δεδομένων σας</li>
               </ul>
-              <p>Για να ασκήσετε οποιοδήποτε από αυτά τα δικαιώματα, επικοινωνήστε μαζί μας στο <a href="mailto:privacy@alarm-systems.gr">privacy@alarm-systems.gr</a>.</p>
+              <p>Για να ασκήσετε οποιοδήποτε από αυτά τα δικαιώματα, επικοινωνήστε μαζί μας στο <a href="mailto:georgekat598@gmail.com">georgekat598@gmail.com</a>.</p>
             </article>
 
             <!-- Security -->
@@ -204,7 +204,7 @@
               <p>Για ερωτήσεις σχετικά με αυτή την πολιτική απορρήτου ή τον τρόπο που χειριζόμαστε τα δεδομένα σας, επικοινωνήστε μαζί μας:</p>
               <div class="card bg-light border-0">
                 <div class="card-body">
-                  <p class="mb-1"><strong>Email:</strong> <a href="mailto:privacy@alarm-systems.gr">privacy@alarm-systems.gr</a></p>
+                  <p class="mb-1"><strong>Email:</strong> <a href="mailto:georgekat598@gmail.com">georgekat598@gmail.com</a></p>
                   <p class="mb-1"><strong>Τηλέφωνο:</strong> <a href="tel:+306980808226">698 080 8226</a></p>
                   <p class="mb-0"><strong>Διεύθυνση:</strong> Κορυτσάς 48, Αιγάλεω, 12243</p>
                 </div>
@@ -253,7 +253,7 @@
             <p class="small">Αρ. ΓΕΜΗ: 182078203000</p>
             <p>
               <a href="tel:+306980808226">698 080 8226</a><br>
-              <a href="mailto:info@alarm-systems.gr">info@alarm-systems.gr</a>
+              <a href="mailto:georgekat598@gmail.com">georgekat598@gmail.com</a>
             </p>
           </address>
         </div>
