--- a/services.html
+++ b/services.html
@@ -291,7 +291,7 @@
             <p class="small">Αρ. ΓΕΜΗ: 182078203000</p>
             <p>
               <a href="tel:+306980808226">698 080 8226</a><br>
-              <a href="mailto:info@alarm-systems.gr">info@alarm-systems.gr</a>
+              <a href="mailto:georgekat598@gmail.com">georgekat598@gmail.com</a>
             </p>
           </address>
         </div>
