--- a/accessibility.html
+++ b/accessibility.html
@@ -165,7 +165,7 @@
                   <h3 class="h6 mb-3">Στοιχεία Επικοινωνίας για θέματα Προσβασιμότητας</h3>
                   <p class="mb-1">
                     <strong>Email:</strong> 
-                    <a href="mailto:accessibility@alarm-systems.gr">accessibility@alarm-systems.gr</a>
+                    <a href="mailto:georgekat598@gmail.com">georgekat598@gmail.com</a>
                   </p>
                   <p class="mb-1">
                     <strong>Τηλέφωνο:</strong> 
@@ -240,7 +240,7 @@
             <p class="small">Αρ. ΓΕΜΗ: 182078203000</p>
             <p>
               <a href="tel:+306980808226">698 080 8226</a><br>
-              <a href="mailto:info@alarm-systems.gr">info@alarm-systems.gr</a>
+              <a href="mailto:georgekat598@gmail.com">georgekat598@gmail.com</a>
             </p>
           </address>
         </div>
