Brand update and working hours
- Changed brand: SafeGuard → SecureGuard (all files)
- Added working hours: Monday - Friday 08:00 - 16:00
- Updated contact page schedule section
- All 9 pages pass WCAG 2.2 AA

--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>404 - Η σελίδα δεν βρέθηκε | SafeGuard</title>
-  <meta name="description" content="Η σελίδα που ζητήσατε δεν βρέθηκε. Επιστρέψτε στην αρχική σελίδα της SafeGuard.">
+  <title>404 - Η σελίδα δεν βρέθηκε | SecureGuard</title>
+  <meta name="description" content="Η σελίδα που ζητήσατε δεν βρέθηκε. Επιστρέψτε στην αρχική σελίδα της SecureGuard.">
   <meta name="robots" content="noindex, follow">
   
   <!-- Bootstrap 5 CSS -->
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" aria-label="Κύρια πλοήγηση">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="assets/logo.svg" alt="SafeGuard - Επιστροφή στην αρχική" width="200" height="50">
+          <img src="assets/logo.svg" alt="SecureGuard - Επιστροφή στην αρχική" width="200" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Εναλλαγή πλοήγησης">
           <span class="navbar-toggler-icon"></span>
@@ -97,7 +97,7 @@
     <div class="container">
       <div class="row g-4">
         <div class="col-lg-4">
-          <h2>SafeGuard</h2>
+          <h2>SecureGuard</h2>
           <p>Παρέχουμε ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις από το 2025. Η ασφάλειά σας είναι η προτεραιότητά μας.</p>
         </div>
         <div class="col-lg-4">
@@ -108,6 +108,10 @@
             <p>
               <a href="tel:+306980808226">698 080 8226</a><br>
               <a href="mailto:georgekat598@gmail.com">georgekat598@gmail.com</a>
+            </p>
+            <p class="small">
+              <strong>Ώρες λειτουργίας:</strong><br>
+              Δευτέρα - Παρασκευή 08:00 - 16:00
             </p>
           </address>
         </div>
@@ -124,7 +128,7 @@
       <div class="footer-bottom">
         <div class="row align-items-center">
           <div class="col-md-6">
-            <p>© 2025-2026 ΚΑΤΣΙΓΙΑΝΝΗΣ ΓΕΩΡΓΙΟΣ ΚΑΙ ΣΙΑ Ο.Ε. (SafeGuard). Με επιφύλαξη παντός δικαιώματος.</p>
+            <p>© 2025-2026 ΚΑΤΣΙΓΙΑΝΝΗΣ ΓΕΩΡΓΙΟΣ ΚΑΙ ΣΙΑ Ο.Ε. (SecureGuard). Με επιφύλαξη παντός δικαιώματος.</p>
           </div>
           <div class="col-md-6 text-md-end">
             <p>Σχεδιασμένο με γνώμονα την προσβασιμότητα</p>
