--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Επικοινωνία - Φόρμα Επικοινωνίας | SafeGuard</title>
-  <meta name="description" content="Επικοινωνήστε με την SafeGuard για δωρεάν μελέτη ασφαλείας, προσφορά ή τεχνική υποστήριξη. Τηλέφωνο, email και φόρμα επικοινωνίας.">
+  <title>Επικοινωνία - Φόρμα Επικοινωνίας | SecureGuard</title>
+  <meta name="description" content="Επικοινωνήστε με την SecureGuard για δωρεάν μελέτη ασφαλείας, προσφορά ή τεχνική υποστήριξη. Τηλέφωνο, email και φόρμα επικοινωνίας.">
   
   <!-- Open Graph -->
-  <meta property="og:title" content="Επικοινωνία | SafeGuard">
+  <meta property="og:title" content="Επικοινωνία | SecureGuard">
   <meta property="og:description" content="Επικοινωνήστε μαζί μας για δωρεάν μελέτη ασφαλείας ή τεχνική υποστήριξη.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://alarm-systems.gr/contact.html">
@@ -15,7 +15,7 @@
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Επικοινωνία | SafeGuard">
+  <meta name="twitter:title" content="Επικοινωνία | SecureGuard">
   <meta name="twitter:description" content="Επικοινωνήστε μαζί μας για δωρεάν μελέτη ασφαλείας.">
   
   <!-- Canonical -->
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" aria-label="Κύρια πλοήγηση">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="assets/logo.svg" alt="SafeGuard - Επιστροφή στην αρχική" width="200" height="50">
+          <img src="assets/logo.svg" alt="SecureGuard - Επιστροφή στην αρχική" width="200" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Εναλλαγή πλοήγησης">
           <span class="navbar-toggler-icon"></span>
@@ -110,7 +110,7 @@
                 <h3 class="h6 mb-1">Επωνυμία & Διεύθυνση</h3>
                 <address class="mb-0 text-muted">
                   <strong>ΚΑΤΣΙΓΙΑΝΝΗΣ ΓΕΩΡΓΙΟΣ ΚΑΙ ΣΙΑ Ο.Ε.</strong><br>
-                  δ.τ. SafeGuard<br>
+                  δ.τ. SecureGuard<br>
                   Κορυτσάς 48<br>
                   Αιγάλεω, 12243<br>
                   Αρ. ΓΕΜΗ: 182078203000
@@ -155,9 +155,7 @@
               <div>
                 <h3 class="h6 mb-1">Ωράριο Λειτουργίας</h3>
                 <p class="mb-0 text-muted">
-                  Δευτέρα - Παρασκευή: 09:00 - 18:00<br>
-                  Σάββατο: 10:00 - 14:00<br>
-                  Κυριακή: Κλειστά
+                  Δευτέρα - Παρασκευή: 08:00 - 16:00
                 </p>
               </div>
             </div>
@@ -376,7 +374,7 @@
     <div class="container">
       <div class="row g-4">
         <div class="col-lg-4">
-          <h2>SafeGuard</h2>
+          <h2>SecureGuard</h2>
           <p>Παρέχουμε ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις από το 2025. Η ασφάλειά σας είναι η προτεραιότητά μας.</p>
         </div>
         <div class="col-lg-4">
@@ -388,6 +386,10 @@
             <p>
               <a href="tel:+306980808226">698 080 8226</a><br>
               <a href="mailto:georgekat598@gmail.com">georgekat598@gmail.com</a>
+            </p>
+            <p class="small">
+              <strong>Ώρες λειτουργίας:</strong><br>
+              Δευτέρα - Παρασκευή 08:00 - 16:00
             </p>
           </address>
         </div>
@@ -404,7 +406,7 @@
       <div class="footer-bottom">
         <div class="row align-items-center">
           <div class="col-md-6">
-            <p>© 2025-2026 ΚΑΤΣΙΓΙΑΝΝΗΣ ΓΕΩΡΓΙΟΣ ΚΑΙ ΣΙΑ Ο.Ε. (SafeGuard). Με επιφύλαξη παντός δικαιώματος.</p>
+            <p>© 2025-2026 ΚΑΤΣΙΓΙΑΝΝΗΣ ΓΕΩΡΓΙΟΣ ΚΑΙ ΣΙΑ Ο.Ε. (SecureGuard). Με επιφύλαξη παντός δικαιώματος.</p>
           </div>
           <div class="col-md-6 text-md-end">
             <p>Σχεδιασμένο με γνώμονα την προσβασιμότητα</p>
