--- a/privacy.html
+++ b/privacy.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Πολιτική Απορρήτου | SafeGuard</title>
-  <meta name="description" content="Πολιτική απορρήτου της SafeGuard. Πώς συλλέγουμε, χρησιμοποιούμε και προστατεύουμε τα προσωπικά σας δεδομένα.">
+  <title>Πολιτική Απορρήτου | SecureGuard</title>
+  <meta name="description" content="Πολιτική απορρήτου της SecureGuard. Πώς συλλέγουμε, χρησιμοποιούμε και προστατεύουμε τα προσωπικά σας δεδομένα.">
   
   <!-- Open Graph -->
-  <meta property="og:title" content="Πολιτική Απορρήτου | SafeGuard">
-  <meta property="og:description" content="Πώς η SafeGuard διαχειρίζεται και προστατεύει τα προσωπικά σας δεδομένα.">
+  <meta property="og:title" content="Πολιτική Απορρήτου | SecureGuard">
+  <meta property="og:description" content="Πώς η SecureGuard διαχειρίζεται και προστατεύει τα προσωπικά σας δεδομένα.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://alarm-systems.gr/privacy.html">
   <meta property="og:locale" content="el_GR">
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Πολιτική Απορρήτου | SafeGuard">
-  <meta name="twitter:description" content="Πώς η SafeGuard διαχειρίζεται τα προσωπικά σας δεδομένα.">
+  <meta name="twitter:title" content="Πολιτική Απορρήτου | SecureGuard">
+  <meta name="twitter:description" content="Πώς η SecureGuard διαχειρίζεται τα προσωπικά σας δεδομένα.">
   
   <!-- Canonical -->
   <link rel="canonical" href="https://alarm-systems.gr/privacy.html">
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" aria-label="Κύρια πλοήγηση">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="assets/logo.svg" alt="SafeGuard - Επιστροφή στην αρχική" width="200" height="50">
+          <img src="assets/logo.svg" alt="SecureGuard - Επιστροφή στην αρχική" width="200" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Εναλλαγή πλοήγησης">
           <span class="navbar-toggler-icon"></span>
@@ -98,7 +98,7 @@
             <!-- Introduction -->
             <article class="mb-5">
               <h2 class="section-title">Εισαγωγή</h2>
-              <p>Η <strong>ΚΑΤΣΙΓΙΑΝΝΗΣ ΓΕΩΡΓΙΟΣ ΚΑΙ ΣΙΑ Ο.Ε.</strong> (διακριτικός τίτλος: SafeGuard, Αρ. ΓΕΜΗ: 182078203000) σέβεται το απόρρητό σας και δεσμεύεται να προστατεύει τα προσωπικά σας δεδομένα. Αυτή η πολιτική απορρήτου εξηγεί πώς συλλέγουμε, χρησιμοποιούμε και προστατεύουμε τις πληροφορίες που μας παρέχετε μέσω του ιστοτόπου μας.</p>
+              <p>Η <strong>ΚΑΤΣΙΓΙΑΝΝΗΣ ΓΕΩΡΓΙΟΣ ΚΑΙ ΣΙΑ Ο.Ε.</strong> (διακριτικός τίτλος: SecureGuard, Αρ. ΓΕΜΗ: 182078203000) σέβεται το απόρρητό σας και δεσμεύεται να προστατεύει τα προσωπικά σας δεδομένα. Αυτή η πολιτική απορρήτου εξηγεί πώς συλλέγουμε, χρησιμοποιούμε και προστατεύουμε τις πληροφορίες που μας παρέχετε μέσω του ιστοτόπου μας.</p>
               <p class="text-muted"><em>Τελευταία ενημέρωση: Ιανουάριος 2026</em></p>
             </article>
 
@@ -243,7 +243,7 @@
     <div class="container">
       <div class="row g-4">
         <div class="col-lg-4">
-          <h2>SafeGuard</h2>
+          <h2>SecureGuard</h2>
           <p>Παρέχουμε ολοκληρωμένες λύσεις ασφαλείας για κατοικίες και επιχειρήσεις από το 2025. Η ασφάλειά σας είναι η προτεραιότητά μας.</p>
         </div>
         <div class="col-lg-4">
@@ -254,6 +254,10 @@
             <p>
               <a href="tel:+306980808226">698 080 8226</a><br>
               <a href="mailto:georgekat598@gmail.com">georgekat598@gmail.com</a>
+            </p>
+            <p class="small">
+              <strong>Ώρες λειτουργίας:</strong><br>
+              Δευτέρα - Παρασκευή 08:00 - 16:00
             </p>
           </address>
         </div>
@@ -270,7 +274,7 @@
       <div class="footer-bottom">
         <div class="row align-items-center">
           <div class="col-md-6">
-            <p>© 2025-2026 ΚΑΤΣΙΓΙΑΝΝΗΣ ΓΕΩΡΓΙΟΣ ΚΑΙ ΣΙΑ Ο.Ε. (SafeGuard). Με επιφύλαξη παντός δικαιώματος.</p>
+            <p>© 2025-2026 ΚΑΤΣΙΓΙΑΝΝΗΣ ΓΕΩΡΓΙΟΣ ΚΑΙ ΣΙΑ Ο.Ε. (SecureGuard). Με επιφύλαξη παντός δικαιώματος.</p>
           </div>
           <div class="col-md-6 text-md-end">
             <p>Σχεδιασμένο με γνώμονα την προσβασιμότητα</p>
